# Particle_sim

./: CMakeLists.txt  README.md
dependencies/include/glad/: glad.h
dependencies/include/headers/: camera.h  mesh.h  shader.h  tiny_obj_loader.h  util.h
shaders/: base_fragment.glsl  base_vertex.glsl  container_fragment.glsl  model_fragment.glsl  model_vertex.glsl
src/: glad.c  main.c  main.cpp  shader_gen.c  shader_gen.h  util.c  util.h
src/headers/: shader.h
